# 24b-emb-expert-1-roberta-barros

main/: CMakeLists.txt  main.c
mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
